--- a/views/add-product.html
+++ b/views/add-product.html
@@ -28,6 +28,11 @@
                 <input type="text" name="title" id="title">
             </div>
 
+            <div class="form-control">
+                <label for="price">Price</label>
+                <input type="text" name="price" id="price">
+            </div>
+
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
