--- a/views/shop.pug
+++ b/views/shop.pug
@@ -3,7 +3,7 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
+        title #{docTitle}
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/product.css")
     body
@@ -13,4 +13,24 @@ html(lang="en")
                     li.main-header__item
                         a.active(href="/") Shop 
                     li.main-header__item
-                        a.active(href="/admin/product") Add Product
+                        a.active(href="/admin/add-product") Add Product
+        
+        main
+            .grid
+                if prod.length > 0
+                    each product in prod
+                        article.card.product-item
+                            header.card__header
+                                h1.product__title #{product.title}
+                        
+                            div.card__image
+                                img(src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book")
+                            
+                            div.card__content
+                                h2.product__price #{product.price}
+                                p.product__description A very interesting book about so many even more interesting things!
+                        
+                            div.card__actions
+                                button.btn Add to Cart
+                else 
+                    h1 No hay productos
