--- a/views/404.pug
+++ b/views/404.pug
@@ -1,19 +1,5 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Error
-        link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="/css/product.css")
-    body 
-        header.main-header
-            nav.main-header__nav
-                ul.main-header__item-list
-                    li.main-header__item
-                        a(href="/") Shop 
-                    li.main-header__item
-                        a.active(href="/admin/add-product") Add Product
+extends layouts/main-layout.pug
 
-        h1 Pagina no encontrada 
-        h3 Prueba los enlaces de arriba
+block content
+    h1 Pagina no encontrada 
+    h3 Prueba los enlaces de arriba
