add rutas y views

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,8 +1,8 @@
-<!--Pagina de carrito de compras-->
+<!--pagina para ver los productos como admin-->
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/product.css">
+    
 </head>
 <body>
     <%- include('../includes/navigation.ejs') %>
-    <h1>aca ira elc arrito</h1>
+    <h1>aca ira los productos para el admin</h1>
 <%- include('../includes/end.ejs') %>
