--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -14,8 +14,18 @@
             </div>
 
             <div class="form-control">
+                <label for="imageUrl">Image URL</label>
+                <input type="text" name="imageUrl" id="imageUrl">
+            </div>
+
+            <div class="form-control">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" rows="6"></textarea>
+            </div>
+
+            <div class="form-control">
                 <label for="price">Price</label>
-                <input type="text" name="price" id="price">
+                <input type="number" name="price" id="price">
             </div>
 
             <button class="btn" type="submit">Add Product</button>
