--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -1,1 +1,8 @@
 <!--pagina para realizar el pago-->
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/product.css">
+</head>
+<body>
+    <%- include('../includes/navigation.ejs') %>
+    <h1>aca ira el checkout</h1>
+<%- include('../includes/end.ejs') %>
