--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -1,1 +1,19 @@
 <!--Pagina para ver el detalle de un producto, cuando doy click en 1-->
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/product.css">
+</head>
+<body>
+    <%- include('../includes/navigation.ejs') %>
+    <main class="centered">
+        <h1><%= prod.title %></h1>
+        <hr>
+        <div>
+            <img src="<%= prod.imageUrl %>" alt="<%= prod.title %>">
+        </div>
+        <h2><%= prod.price %></h2>
+        <p><%= prod.description %></p>
+        <form action="/cart" method="POST">
+            <button class="btn" type="submit">Add to Cart</button>
+        </form>
+    </main>
+<%- include('../includes/end.ejs') %>
