--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -8,28 +8,30 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="product-form" action="/admin/add-product" method="POST">
+        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
-                <input type="text" name="title" id="title">
+                <!-- <input type="text" name="title" id="title" value="<% if (editing) {%><%= prod.title %><%} %>"> -->
+                <!--operador ternario es mas easy-->
+                <input type="text" name="title" id="title" value="<%= (editing) ? prod.title : '' %>">
             </div>
 
             <div class="form-control">
                 <label for="imageUrl">Image URL</label>
-                <input type="text" name="imageUrl" id="imageUrl">
+                <input type="text" name="imageUrl" id="imageUrl"value="<% if (editing) {%><%=prod.imageUrl %><%} %>">
             </div>
 
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="6"></textarea>
+                <textarea name="description" id="description" rows="6"><% if (editing) {%><%= prod.description %><%} %></textarea >
             </div>
 
             <div class="form-control">
                 <label for="price">Price</label>
-                <input type="number" name="price" id="price">
+                <input type="number" name="price" id="price" step="0.01" value="<% if (editing) {%><%= prod.price %><%} %>">
             </div>
 
-            <button class="btn" type="submit">Add Product</button>
+            <button class="btn" type="submit"><% if (editing) { %> Actualizar Producto <% } else { %> Add Product <% } %></button>
         </form>
     </main>
     
