--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -24,6 +24,7 @@
                             <!--Si usamos params y query, deebmos pasarlo en la ruta-->
                             <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                             <form action="/admin/delete-product" method="POST">
+                                <input type="hidden" name="productId" value="<%= product.id %>">
                                 <button class="btn" type="submit">Delete</button>
                             </form>                 
                         </div>
